--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "app/App.tsx", "app/main.tsx", "app/vite-env.d.ts"]
+  "include": ["src", "app/App.tsx", "app/main.tsx", "app/vite-env.d.ts", "papers"]
 }
